# Equinox-Logger-2

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  EquinoxLogger.h  EquinoxLoggerConfig.cmake  LICENSE  README.md  cmake-files-cleaner.sh  git-commands-dev-helper.txt  install_manifest.txt  remake-cmake.sh
.github/workflows/: ci.yml
Code-Style-Formatting-Info/: Coding-Style-Info.txt  eclipse-cpp-google-style.xml
Setup-Environment-Scripts/: development_tools_install_script.sh  gtest_install_script.sh
api/: EquinoxLogger-Common.h  EquinoxLogger.h  EquinoxLogger.hpp  EquinoxLoggerCommon.h  EquinoxLoggerEngine.h
examples/: CMakeLists.txt  main.cpp
examples/src/: EquinoxLoggerExamples.cpp  main.cpp
include/: AsyncLogQueue.h  AsyncLogQueueEngine.h  ColorFormatter.h  ConsoleLogsProducer.h  EquinoxLogger-Common.h  EquinoxLogger-ConsoleLogsProducer.h  EquinoxLogger-FileLogsProducer.h  EquinoxLogger-LoggerEngine.h  EquinoxLogger-LoggerEngineLogic.h  EquinoxLogger-LoggerManager.h  EquinoxLogger-LogsProducer.h  EquinoxLogger-TimestampProducer.h  EquinoxLogger.h  EquinoxLoggerEngineImpl.h  FileLogsProducer.h  IAsyncLogQueue.h  IAsyncLogQueueEngine.h  IColorFormatter.h  IEquinoxLoggerEngineImpl.h  IFileLogsProducer.h  ITimestampProducer.h  TimestampProducer.h
scripts/: build.sh  coverage.sh
src/: AsyncLogQueue.cpp  AsyncLogQueueEngine.cpp  ColorFormatter.cpp  ConsoleLogsProducer.cpp  Equinox-Logger-LoggerManager.cpp  EquinoxLogger-ConsoleLogsProducer.cpp  EquinoxLogger-FileLogsProducer.cpp  EquinoxLogger-LoggerEngine.cpp  EquinoxLogger-LoggerEngineLogic.cpp  EquinoxLogger-LoggerManager.cpp  EquinoxLogger-LogsProducer.cpp  EquinoxLogger-TimestampProducer.cpp  EquinoxLogger.cpp  EquinoxLoggerEngine.cpp  EquinoxLoggerEngineImpl.cpp  FileLogsProducer.cpp  TimestampProducer.cpp  main.cpp
tests/: CMakeLists.txt
tests/Mocks/: ConsoleLogsProducerMock.h  FileLogsProducerMock.h
tests/mocks/: AsyncLogQueueEngineMock.h  AsyncLogQueueMock.h  ColorFormatterMock.h  EquinoxLoggerEngineImplMock.h  FileLogsProducerMock.h  TimestampProducerMock.h
tests/src/: AsyncLogQueueEngineTest.cpp  AsyncLogQueueTest.cpp  ColorFormatterTest.cpp  ConsoleLogsProducerTest.cpp  EquinoxLoggerApiTest.cpp  EquinoxLoggerEngineImplTest.cpp  EquinoxLoggerEngineTest.cpp  EquinoxLoggerTest.cpp  FileLogsProducerTest.cpp  LogsProducerTests.cpp  MultipleThreadsTest.cpp  TimestampProducerTests.cpp
